added markdown cell of data information

--- a/exercise-data-selection.ipynb
+++ b/exercise-data-selection.ipynb
@@ -1,12 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85735b3a-29b1-40ee-8b7b-2513fa75f891",
+   "cell_type": "markdown",
+   "id": "6d947dd1-1a12-4d83-9326-62154a91183e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### The Data\n",
+    "\n",
+    "Description: This dataset contains occurrence records of prey arthopods in California Drylands and associated climate and environmental data.\n",
+    "\n",
+    "Citation: Rachel King, Jenna Braun, Michael Westphal, & CJ Lortie. (2023). Compiled occurrence records for prey items of listed species found in California drylands with associated environmental data. Knowledge Network for Biocomplexity. doi:10.5063/F1VM49RH.\n",
+    "\n",
+    "Data accessed: 10/5/2023\n"
+   ]
   }
  ],
  "metadata": {
